<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnBackToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:text="@string/back_to_home"
            android:textColor="@color/black"
            app:icon="?attr/actionModeCloseDrawable"
            android:layout_marginTop="60dp"/>


        <TextView
            android:id="@+id/textViewChangeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_change_your_personal_information"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/btnBackToHome"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@id/textViewChangeInfo"
            android:hint="@string/enter_your_name"
            android:textAlignment="center"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@id/edtName"
            android:textAlignment="center"
            android:hint="@string/enter_your_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@id/edtPhone"
            android:hint="@string/enter_your_email"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edtEmail"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_below="@+id/btnSubmit"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            />


    </RelativeLayout>

</FrameLayout>