<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/menu" />

            <ImageButton
                android:id="@+id/btnSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/settings"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/topLayout"
            android:layout_marginTop="50dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LL1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnHeartRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/heart_rate" />

                    <TextView
                        android:id="@+id/txtHeartRate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/click_to_record"
                        android:textAlignment="center"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnSpO2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/sp02" />

                    <TextView
                        android:id="@+id/txtSpO2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/click_to_record"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="90dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LL2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnHeartPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/heart_pressure" />

                    <TextView
                        android:id="@+id/txtHeartPressure"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/click_to_record"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/temperature" />

                    <TextView
                        android:id="@+id/txtTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/click_to_record"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secLayout"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnWebsite"
                android:layout_width="179dp"
                android:layout_height="87dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/pink"
                android:text="@string/go_to_website"/>

            <Button
                android:id="@+id/btnHelp"
                android:layout_width="142dp"
                android:layout_height="71dp"
                android:layout_below="@+id/btnWebsite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/ask_for_help"/>
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>